# omni-devenv-fusion

./: .envrc  .github-description.txt  .gitignore  .gitmodules  .vale.ini  AGENTS.md  Backlog.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  claude.nix  cog.toml  debug_graph_import.py  devenv.nix  devenv.yaml  flake.nix  garnix.yaml  justfile  lefthook.nix  omni-core-rs.patch  pyproject.toml  repomix-output.xml  repomix.config.json  secretspec.toml  short_story.md  test-mcp.py  zk.toml
.cargo/: config.toml
.claude/: project_instructions.md  settings.json  settings.local.json
.claude/commands/: backlog.md  commit.md  hotfix.md  load-skill.md  load-skills.md  omni.md  skills.md  smart-commit.md
.claude/plans/: odf-ep-v6-planning-prompt.md
.codex/: config.toml
.config/omni-dev-fusion/: settings.yaml  wendao.yaml
.cursor/: mcp.json
.cursor/commands/: omni.md
.gemini/: settings.json
.gemini/commands/: omni.toml
.github/workflows/: checks.yaml  ci.yaml  omni-agent-memory-gates.yaml  omni-agent-valkey-live.yaml
.zk/: config.toml
agent/: __init__.py  references.yaml  settings.yaml
agent/how-to/: agent-native-development.md  documentation-workflow.md  git-workflow.md  gitops.md  release-process.md  testing-workflows.md
agent/instructions/: problem-solving.md  project-conventions.md
agent/knowledge/: README.md  uv-best-practices.md
agent/prompts/: system_core.md
agent/skills/: README.md  __init__.py
agent/specs/: advanced_search_tool.md  (+16 more)
assets/: references.yaml  settings.yaml
assets/skills/_template/: README.md  SKILL.md  guide.md  guide.md.j2  manifest.json  prompts.md  pyproject.toml  tools.py
assets/skills/_template/references/: skill-workflow.md
assets/skills/_template/scripts/: __init__.py  commands.py  example.py
assets/skills/_template/tests/: test_template_commands.py
assets/skills/crawl4ai/: README.md  SKILL.md  implementation.py  manifest.json  prompts.md  pyproject.toml  tools.py
assets/skills/crawl4ai/scripts/: __init__.py  crawl_url.py  engine.py  graph.py  isolation.py  utils.py
assets/skills/crawl4ai/scripts/references/: README.md  chunking.md  deep-crawl.md  smart-chunking.md
assets/skills/crawl4ai/tests/: __init__.py  test_crawl4ai_skill.py  test_graph.py
design/: gemini_cli_vs_aider_vs_claude.md  mcp-architecture-roadmap.md  why-custom-mcp-architecture.md  writing_style.md  zettelkasten-knowledge-architecture.md
docs/: Getting Started.md  MODERNIZATION_SUMMARY.md  backlog.md  design-philosophy.md  index.md  skills.md
mcp-server/: README.md  architecture-philosophy.md  coder.py  docs.py  dual-mode-context.md  executor.py  git_ops.py  guidelines.md  lang_expert.py  orchestrator.py  personas.py  product_owner.py  pyproject.toml  reviewer.py  router.py  temp_test.py  tester.py  writer.py
mcp-server/mcp_core/: __init__.py  execution.py  inference.py  instructions.py  memory.py  utils.py
mcp-server/services/: swarm.py
mcp-server/tests/: conftest.py  test_actual_session.py  test_basic.py  test_code_intelligence.py  test_git_ops_recovery.py  test_git_ops_v2.py  test_instructions.py  test_mcp_session.py  test_router.py  test_stress.py  test_writer_compliance.py  workflows.py
mcp-server/tests/stress/: __init__.py
mcp-server/tests/stress/core/: __init__.py
mcp-server/tests/stress/suites/: __init__.py  template.py
modules/: claude.nix  files.nix  lefthook.nix  python.nix
scripts/: README.md  agent-channel-webhook.sh  benchmark.py  benchmark_full.py  benchmark_json_vs_arrow.py  benchmark_kernel.py  benchmark_knowledge_recall.py  benchmark_omni.py  benchmark_rust_core.py  benchmark_sniffer.py  benchmark_wendao_related.py  benchmark_wendao_related.sh  benchmark_wendao_search.py  benchmark_wendao_search.sh  broken_math.py  ci-contract-freeze.sh  ci-local-recall-gates.sh  contract_freeze_lock.py  generate_keyword_backend_decision_report.py  generate_keyword_backend_multi_model_report.py  generate_keyword_backend_statistical_report.py  generate_llm_index.py  generate_skill_index.py  generate_vector_search_options_contract.py  knowledge_recall_perf_gate.py  probe_llm_models.py  recall_paper_to_file.py  recall_profile.py  recall_profile_phases.py  run_keyword_backend_llm_eval.py  run_keyword_backend_multi_model_batches.py  skills_monitor.py  stress_trinity.py  sync-for-gpt.sh  test_broken_math.py  test_cartographer.py  test_meta_agent.py  test_ouroboros.py  test_router.py  test_session_retrospective.py  (+14 more)
src/agent/: main.py  pyproject.toml
src/agent/capabilities/: knowledge_ingestor.py  lang_expert.py  output.py  product_owner.py  skill_manager.py  skill_registry.py
src/agent/core/: bootstrap.py  context_loader.py  reviewer.py  router.py  schema.py  skill_registry.py
src/agent/core/workflows/: commit_flow.py
src/agent/skills/git/: tools.py
src/agent/tests/: test_git_security.py  test_mcp_dependencies.py  test_phase11.py  test_phase13_skills.py  test_phase13_stress.py
src/agent/tools/: commit.py  context.py  execution.py  router.py  spec.py
src/common/: pyproject.toml
src/common/mcp_core/: __init__.py  api_key.py  gitops.py  inference.py  instructions.py  lazy_cache.py  project_context.py  reference_library.py
src/common/mcp_server/tests/: conftest.py  test_actual_session.py  test_basic.py  test_git_ops_recovery.py  test_git_ops_v2.py  test_hive_architecture.py  test_hive_robustness.py  test_instructions.py  test_librarian.py  test_mcp_session.py  test_phase11_auth.py  test_phase9_stress.py  test_router.py  test_smart_commit_scenarios.py  test_stress.py  test_writer_compliance.py  workflows.py
src/common/mcp_server/tests/stress/: __init__.py
src/common/mcp_server/tests/stress/core/: fixtures.py
src/common/mcp_server/tests/stress/suites/: phase9.py  template.py
src/common/services/: coder_service.py  swarm.py
src/mcp_server/coder/: advanced_search.py  main.py  pyproject.toml
src/mcp_server/executor/: docs.py  git_ops.py  main.py  pyproject.toml  tester.py  writer.py
tests/: mcp_utils.py  test_basic.py
tool-router/: README.md  run_router_example.py  thread-safe-instructions-loader.md
(+795 files in other folders)
