[workspace]
resolver = "2"

# Include all Rust crates from packages/rust/
members = [
    "packages/rust/crates/*",
    "packages/rust/bindings/python"
]

# Workspace package metadata (inherited by all crates)
[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Omni-Dev-Fusion Team"]
license = "Apache-2.0"
publish = false
description = "Omni-Dev-Fusion Fusion - Trinity Architecture with Rust Core"

# Unified dependency management
[workspace.dependencies]
# Core dependencies
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.100"
thiserror = "2.0.17"
walkdir = "2.5.0"
uuid = { version = "1.11", features = ["v4"] }

# Git operations (libgit2 for performance)
git2 = "0.20.3"

# Python bindings - Python 3.13 support via PyO3 0.27+
pyo3 = { version = "0.27.2", features = ["extension-module"] }

# Safe I/O & Tokenization
tiktoken-rs = "0.9.1"
memchr = "2.7.6"
tempfile = "3.24"

# Performance optimization - Thin LTO for reduced memory
[profile.release]
opt-level = "s"      
lto = "thin"        
codegen-units = 1
strip = true        
panic = "abort"     

# [ODF-REP] Global Lints Configuration (Rust 1.74+)
[workspace.lints.rust]
unsafe_code = "deny"       # Default deny unsafe unless explicitly allowed
missing_docs = "warn"      # Public APIs must have documentation

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"       # Deny unwrap usage in production
expect_used = "deny"       # Deny expect usage in production

