[workspace]
resolver = "2"

# Include all Rust crates explicitly (no glob to avoid missing crate errors)
members = [
    "packages/rust/bindings/python",
    "packages/rust/crates/omni-ast",
    "packages/rust/crates/omni-edit",
    "packages/rust/crates/omni-events",
    "packages/rust/crates/omni-executor",
    "packages/rust/crates/omni-io",
    "packages/rust/crates/omni-knowledge",
    "packages/rust/crates/omni-lance",
    "packages/rust/crates/omni-scanner",
    "packages/rust/crates/omni-security",
    "packages/rust/crates/omni-sniffer",
    "packages/rust/crates/omni-tags",
    "packages/rust/crates/omni-tokenizer",
    "packages/rust/crates/omni-tui",
    "packages/rust/crates/omni-types",
    "packages/rust/crates/omni-vector",
]

# Workspace package metadata (inherited by all crates)
[workspace.package]
version = "0.1.1"
edition = "2024"
authors = ["Omni-Dev-Fusion Team"]
license = "Apache-2.0"
publish = false
description = "Omni-Dev-Fusion Fusion - Trinity Architecture with Rust Core"

# Unified dependency management
[workspace.dependencies]
# Core dependencies
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.100"
thiserror = "2.0.17"
walkdir = "2.5.0"
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4.38", default-features = false }
tracing = "0.1"
globset = "0.4"

# Git operations (libgit2 for performance)
git2 = "0.20.3"

# Python bindings - Python 3.13 support via PyO3 0.27+
pyo3 = { version = "0.27.2", features = ["extension-module"] }
pyo3-asyncio = { version = "0.27", features = ["tokio"] }

# Safe I/O & Tokenization
tiktoken-rs = "0.9.1"
memchr = "2.7.6"
tempfile = "3.24"

# JSON Schema generation for Schema Singularity (SSOT)
schemars = "0.8.21"

# LanceDB for vector storage
lance = "1.0"
lance-arrow = "1.0"

# Logging
log = "0.4"

# Performance optimization - Thin LTO for reduced memory
[profile.release]
opt-level = "s"      
lto = "thin"        
codegen-units = 1
strip = true        
panic = "abort"     

# [ODF-REP] Global Lints Configuration (Rust 1.74+)
[workspace.lints.rust]
unsafe_code = "deny"       # Default deny unsafe unless explicitly allowed
missing_docs = "warn"      # Public APIs must have documentation

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"       # Deny unwrap usage in production
expect_used = "deny"       # Deny expect usage in production

