[project]
name = "omni-dev-fusion"
description = "Tri-MCP Agentic OS: orchestrator + executor + coder"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]


[dependency-groups]
dev = [
    "omni-dev-fusion-agent",
    "omni-dev-fusion-common",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.14.10",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"


[tool.uv.sources]
omni-dev-fusion-common = { workspace = true }
omni-dev-fusion-agent = { workspace = true }


[tool.uv.workspace]
members = ["packages/python/*"]


[tool.hatch.build.targets.wheel]
packages = []
bypass-selection = true


[tool.ruff]
target-version = "py312"
line-length = 100


[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["packages/python/agent/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::pytest.PytestReturnNotNoneWarning",
]
norecursedirs = ["stress_tests"]
