[project]
name = "omni-dev-fusion"
description = "Tri-MCP Agentic OS: orchestrator + executor + coder"
readme = "README.md"
requires-python = ">=3.13"
dynamic = ["version"]


[dependency-groups]
dev = [
    "omni-core-rs",
    "omni-agent",
    "omni-foundation",
    "omni-core",
    "polyfactory>=3.2.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-randomly>=4.0.1",
    "pytest-xdist>=3.6.1",
    "dirty-equals>=0.11",
    "ruff>=0.14.10",
    "vulture>=2.14",
    "pytest-json-report>=1.5.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"


[tool.uv.sources]
omni-foundation = { workspace = true }
omni-agent = { workspace = true }
omni-core = { workspace = true }
omni-mcp = { workspace = true }
omni-core-rs = { path = "packages/rust/bindings/python", editable = true }


[tool.uv.workspace]
members = ["packages/python/*"]


[tool.hatch.build.targets.wheel]
packages = []
bypass-selection = true


[tool.ruff]
target-version = "py313"
line-length = 100
src = ["packages/python/agent/src", "packages/python/core/src", "packages/python/foundation/src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["omni.agent", "omni.core", "omni.foundation"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
namespace_packages = true
explicit_package_bases = true
mypy_path = ["packages/python/agent/src", "packages/python/core/src", "packages/python/foundation/src"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = [
    "packages/python/agent/tests",
    "packages/python/core/tests",
    "packages/python/mcp-server/tests",
    "packages/python/foundation/tests",
    "assets/skills"
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::pytest.PytestReturnNotNoneWarning",
]
norecursedirs = ["stress_tests"]


[tool.vulture]
# Vulture configuration for dead code detection
paths = ["packages/python/agent/src", "packages/python/foundation/src"]
min_confidence = 80
# Exclude generated or third-party code
exclude = ["*/tests/*", "*/__pycache__/*", "*/.venv/*", "*/venv/*"]
