[project]
name = "omni-dev-fusion-agent"
version = "0.1.0"
description = "Orchestrator MCP server - The Brain for omni-dev-fusion"
requires-python = ">=3.12"

dependencies = [
    "mcp>=1.1.0",
]

[project.scripts]
orchestrator = "agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[tool.uv.sources]
omni-dev-fusion-common = { workspace = true }
