[project]
name = "omni-dev-fusion-common"
version = "0.1.0"
description = "Shared kernel for omni-dev-fusion MCP servers"
requires-python = ">=3.12"

dependencies = [
    "anthropic>=0.75.0",
    "structlog>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/common"]
