[project]
name = "skill-crawl4ai"
version = "0.1.0"
description = "High performance web crawler skill for Omni - uses Sidecar Execution Pattern"
requires-python = ">=3.11"
dependencies = [
    "crawl4ai>=0.5.0",
    "pydantic>=2.0",
    "fire>=0.5.0",
]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pyright]
# IDE type checking - resolve omni.foundation imports
pythonVersion = "3.13"
venvPath = ["../.."]
venv = ".venv"
