[project]
name = "omni-dev-fusion-coder"
version = "0.1.0"
description = "Coder MCP server - The Pen for omni-dev-fusion"
requires-python = ">=3.12"

dependencies = [
    "mcp>=1.1.0",
    "omni-dev-fusion-common",
]

[project.scripts]
coder = "mcp_server.coder.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server/coder"]

[tool.uv.sources]
omni-dev-fusion-common = { workspace = true }
