[project]
name = "omni-dev-fusion-executor"
version = "0.1.0"
description = "Executor MCP server - The Hands for omni-dev-fusion"
requires-python = ">=3.12"

dependencies = [
    "mcp>=1.1.0",
]

[project.scripts]
executor = "mcp_server.executor.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server/executor"]

[tool.uv.sources]
omni-dev-fusion-common = { workspace = true }
